# Eating_shot

./: .gitignore  .pre-commit-config.yaml  Caddyfile  README.md  docker-compose.dev.yml  docker-compose.yml  filebeat.yml  home.css  home.html  info.css  info.html  login.css  login.html  logstash.conf  metricbeat.yml  nginx.conf  packetbeat.yml  prometheus.yml  pyproject.toml  run_consumer.py
.github/workflows/: deploy.yml
Eating_shot-main/: home.html  info.html  join.html  login.html
ai_inference_template_fastapi/: pyproject.toml
ai_workload/: README.md  inference_client.py  models.py  tasks.py
ai_workload/kafka/: consumer.py  producer.py
ai_workload/migrations/: 0001_initial.py  0002_initial.py
api/v1/: api_urls.py  api_views.py  serializers.py
core/: settings.py  urls.py
djangoapp/: Dockerfile  manage.py  requirements.txt  run_consumer.py
djangoapp/ai_workload/: README.md  apps.py  inference_client.py  models.py  serializers.py  tasks.py  urls.py  views.py
djangoapp/ai_workload/kafka/: consumer.py
djangoapp/ai_workload/migrations/: 0001_initial.py  0002_initial.py  0003_inferenceresult_modified_at_and_more.py  0004_inferenceresult_result_changeable_food_info.py
djangoapp/api/: urls.py
djangoapp/api/v1/: api_urls.py
djangoapp/core/: asgi.py  celery.py  middleware.py  settings.py  urls.py
djangoapp/events/: apps.py  models.py  signals.py  tasks.py  urls.py  views.py
djangoapp/events/migrations/: 0001_initial.py  0002_hospitalalarm_task_id_pillalarm_task_id.py  0003_remove_pillalarm_task_id_pillalarm_task_ids.py  0004_pillalarm_reschedule_task_id.py
djangoapp/static/css/: base.css  blood.css  diet.css  exercise.css  forms.css  home.css  info.css  mypage.css  report.css
djangoapp/static/js/: blood.js  diet.js  exercise.js  mypage.js  report.js  serviceworker.js
djangoapp/templates/users/: base.html  blood.html  blood1_revise_form.html  blood2_revise_form.html  blood3_revise_form.html  blood_form1.html  blood_form2.html  blood_form3.html  change_password.html  diet.html  diet_form.html  diet_revise_form.html  exercise.html  exercise_form.html  exercise_list.html  exercise_revise_form.html  food_detail.html  home.html  info.html  (+7 more)
djangoapp/tests/: test_inference_integration.py  test_performance.py  test_security.py  test_tasks.py  test_transactions.py
djangoapp/users/: admin.py  models.py  serializers.py  urls.py  views.py
djangoapp/webapp/: forms.py  urls.py  utils.py  views.py
docs/: README.md  data.yaml  food_calories.csv  food_recommed.csv  yolo_model.ipynb  추천시스템_운동.ipynb  추천시스템_음식.ipynb
inference/: Dockerfile  creating_rec_model.ipynb  exercise_category.csv  exercise_cuchon2.ipynb  exercisestuff.ipynb  food_calories.csv  food_calories1-2.csv  food_calories2.csv  main.py  recommend_food.joblib  requirements.txt
inference/models/: data.yaml
inference_dummy_fastapi/: main.py
models/: models.txt
static/css/: TODO.txt  base.css  blood.css  diet.css  exercise.css  forms.css  home.css  info.css  join.css  login.css  mypage.css  report.css
templates/raw_html/: blood.html  blood_form1.html  blood_form2.html  blood_form3.html  diet.html  diet_form.html  exercise.html  exercise_form.html  exercise_list.html  home.html  report.html
templates/stashed/: README.md  all.js  blood.css  blood.html  blood.js  blood_form1.html  blood_form2.html  blood_form3.html  diet.css  diet.html  diet.js  diet_form.html  exercise.css  exercise.html  exercise_form.html  exercise_list.html  home.css  home.html  info.css  info.html  join.css  join.html  login.html  mypage.css  mypage.html  report.css  report.html
templates/users/: base.html  blood.html  blood_form1.html  blood_form2.html  blood_form3.html  diet.html  diet_form.html  exercise.html  exercise_form.html  exercise_list.html  home.html  info.html  login.html  mypage.html  register.html  report.html
users/: admin.py  api_urls.py  api_views.py  forms.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_age_customuser_birthdate_and_more.py
webapp/: forms.py  urls.py  views.py
webapp/templatetags/: custom_tags.py
(+15 files in other folders)
