[tool.poetry]
name = "deejeiango"
version = "0.1.0"
description = ""
authors = ["Jonggwan Park <craftguy55@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.1"
djangorestframework = "^3.15.2"
markdown = "^3.7"
django-filter = "^24.3"
drf-spectacular = "^0.27.2"
ruff = "^0.6.4"
pyjwt = "^2.9.0"
djangorestframework-simplejwt = "^5.3.1"
pillow = "^10.4.0"
celery = "^5.4.0"
requests = "^2.32.3"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"
python-logstash = "^0.4.8"
python-dotenv = "^1.0.1"
ultralytics = "^8.2.91"
python-multipart = "^0.0.9"
psycopg2-binary = "^2.9.9"
ujson = "^5.10.0"
django-eventstream = {extras = ["drf"], version = "^5.3.1"}
daphne = "^4.1.2"
channels = "^4.1.0"
redis = "^5.1.1"
django-celery-beat = "^2.7.0"
django-celery-results = "^2.5.1"
flower = "^2.0.1"
httpx = "^0.27.2"
olefile = "^0.47"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
