[tool.poetry]
name = "ai-inference-template"
version = "0.1.0"
description = ""
authors = ["Jonggwan Park <craftguy55@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
